Creando formulario para ingreso de datos usando ajax

--- a/sgim/templates/incidencias/cambios.html
+++ b/sgim/templates/incidencias/cambios.html
@@ -15,5 +15,8 @@ Ctrl. de Cambios
     <a class=" item" href="{% url 'cambio_add' %}">
         <i class=" add icon"></i> Nueva Cambio
     </a>
+    	<a class=" item" href="{% url 'cambios_follow' %}">
+		<i class=" add icon"></i> Seguimiento
+	</a>
 </div>
 {% endblock contenido %}
