--- a/sgim/templates/incidencias/incidencias.html
+++ b/sgim/templates/incidencias/incidencias.html
@@ -6,14 +6,17 @@ Incidencias
 
 {% block contenido %}
 <div class="ui purple menu">
-    <a class="item" href="/">
-        <i class="home icon"></i> Inicio
-    </a>
-    <a class="active item" href="{% url 'incidentes_list' %}">
-        <i class="icon ion-settings"></i> incidencias.
-    </a>
-    <a class=" item" href="{% url 'incidente_add' %}">
-        <i class=" add icon"></i> Nueva incidencia
+	<a class="item" href="/">
+		<i class="home icon"></i> Inicio
+	</a>
+	<a class=" active item" href="{% url 'incidentes_list' %}">
+		<i class="icon ion-settings"></i> incidencias.
+	</a>
+	<a class=" item" href="{% url 'incidente_add' %}">
+		<i class=" add icon"></i> Nueva incidencia
+	</a>
+    <a class=" item" href="{% url 'incidentes_follow' %}">
+        <i class=" add icon"></i> Seguimiento
     </a>
 </div>
 {% endblock contenido %}
