--- a/sgim/templates/incidencias/nueva_incidencia.html
+++ b/sgim/templates/incidencias/nueva_incidencia.html
@@ -44,6 +44,9 @@ Nueva incidencia
 	<a class="active item" href="{% url 'incidente_add' %}">
 		<i class=" add icon"></i> Nueva incidencia
 	</a>
+    <a class=" item" href="{% url 'incidentes_follow' %}">
+        <i class=" add icon"></i> Seguimiento
+    </a>
 </div>
 
 <div class="container-fluid">
